Refactor to prepare code for MVP
(cherry picked from commit 7d49d1a7195e612cee2f46d94ef95f15a9af5357)

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.antonioleiva.myplayer.DetailActivity">
+    tools:context="com.antonioleiva.myplayer.ui.detail.DetailActivity">
 
     <ImageView
         android:id="@+id/detail_thumb"
